orbs/wc/9/work/compile.log
wc.c:11:5: warning: data definition has no type or storage class
     inword = 0;
     ^
wc.c:11:5: warning: type defaults to ‘int’ in declaration of ‘inword’ [-Wimplicit-int]
wc.c:12:5: warning: data definition has no type or storage class
     words = 0;
     ^
wc.c:12:5: warning: type defaults to ‘int’ in declaration of ‘words’ [-Wimplicit-int]
wc.c:13:5: error: expected identifier or ‘(’ before ‘while’
     while (scanf("%c", &c) == 1)
     ^
wc.c:48:1: error: expected identifier or ‘(’ before ‘}’ token
 }
 ^
